--- a/style.css
+++ b/style.css
@@ -3,13 +3,16 @@ body{
     margin: 0;
 }
 h1{
-    font-size: 500 px;
-    
+    font-size: 50 px;
+    margin-bottom: 80px;
+    }
+h2{
+    font-size: 40;
 }
 .orange-color{
     color: orange;
 } 
-section{
+.flex-container{
     display: flex;
     margin-bottom: 100px;
 }
@@ -39,4 +42,32 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-area{
+    margin-left: 30px;
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left ;
+}
+.experience-item{
+    width: 40%;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-left: px;
+    box-shadow: 10px 10px 20px gray ;
+    padding-left: 10px;
+    border-radius: 10px;
+}
+#baby-dev{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+footer p {
+    text-align: center;
 }
